--- a/app/src/main/res/layout-large/activity_pdash.xml
+++ b/app/src/main/res/layout-large/activity_pdash.xml
@@ -23,17 +23,19 @@
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7"
+                    android:layout_weight="8"
                     android:id="@+id/sp_penrollids"/>
 
                 <TextView
                     android:id="@+id/tv_pcourseid"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:textStyle="bold"
                     android:textColor="@color/green"
                     android:hint="courseid"
                     android:layout_margin="2dp"
-                    android:layout_weight="3"/>
+                    android:layout_weight="2"/>
 
             </LinearLayout>
 
@@ -50,167 +52,181 @@
 
                     <com.github.mikephil.charting.charts.PieChart
                         android:id="@+id/chart1"
+                        android:layout_gravity="center_horizontal"
                         android:layout_width="250dp"
                         android:layout_height="250dp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:weightSum="10"
                         android:orientation="horizontal">
 
-                        <TextView
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Total Tests"
-                            android:layout_weight="2"
-                            android:textStyle="bold"
-                            android:textColor="@color/green"/>
+                            android:layout_weight="1"
+                            android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/tv_ptottests"
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:weightSum="10"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Total Tests"
+                                    android:layout_weight="2"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/green"/>
+
+                                <TextView
+                                    android:id="@+id/tv_ptottests"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="0"
+                                    android:layout_weight="8"
+                                    android:textStyle="bold"
+                                    android:textColor="#000000"/>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:weightSum="10"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Attempted"
+                                    android:layout_weight="2"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/green"/>
+
+                                <TextView
+                                    android:id="@+id/tv_pattempted"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="0"
+                                    android:layout_weight="8"
+                                    android:textStyle="bold"
+                                    android:textColor="#000000"/>
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:weightSum="10"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Tests as per Plan"
+                                    android:layout_weight="2"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/green"/>
+
+                                <TextView
+                                    android:id="@+id/tv_ptestsasplan"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="0"
+                                    android:layout_weight="8"
+                                    android:textStyle="bold"
+                                    android:textColor="#000000"/>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="0"
-                            android:layout_weight="8"
-                            android:textStyle="bold"
-                            android:textColor="#000000"/>
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:weightSum="10"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="%"
+                                    android:layout_weight="2"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/green"/>
+
+                                <TextView
+                                    android:id="@+id/tv_ppercent"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="0"
+                                    android:layout_weight="8"
+                                    android:textStyle="bold"
+                                    android:textColor="#000000"/>
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:weightSum="10"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="RAG for Attempts"
+                                    android:layout_weight="2"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/green"/>
+
+                                <TextView
+                                    android:id="@+id/tv_pRAGattempt"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="0"
+                                    android:layout_weight="8"
+                                    android:textStyle="bold"
+                                    android:textColor="#000000"/>
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:weightSum="10"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="RAG for AVG score"
+                                    android:layout_weight="2"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/green"/>
+
+                                <TextView
+                                    android:id="@+id/tv_pRAGAVGscore"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="0"
+                                    android:layout_weight="8"
+                                    android:textStyle="bold"
+                                    android:textColor="#000000"/>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
                     </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:weightSum="10"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Attempted"
-                            android:layout_weight="2"
-                            android:textStyle="bold"
-                            android:textColor="@color/green"/>
-
-                        <TextView
-                            android:id="@+id/tv_pattempted"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:layout_weight="8"
-                            android:textStyle="bold"
-                            android:textColor="#000000"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:weightSum="10"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Tests as per Plan"
-                            android:layout_weight="2"
-                            android:textStyle="bold"
-                            android:textColor="@color/green"/>
-
-                        <TextView
-                            android:id="@+id/tv_ptestsasplan"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:layout_weight="8"
-                            android:textStyle="bold"
-                            android:textColor="#000000"/>
-
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:weightSum="10"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="%"
-                            android:layout_weight="2"
-                            android:textStyle="bold"
-                            android:textColor="@color/green"/>
-
-                        <TextView
-                            android:id="@+id/tv_ppercent"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:layout_weight="8"
-                            android:textStyle="bold"
-                            android:textColor="#000000"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:weightSum="10"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="RAG for Attempts"
-                            android:layout_weight="2"
-                            android:textStyle="bold"
-                            android:textColor="@color/green"/>
-
-                        <TextView
-                            android:id="@+id/tv_pRAGattempt"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:layout_weight="8"
-                            android:textStyle="bold"
-                            android:textColor="#000000"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:weightSum="10"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="RAG for AVG score"
-                            android:layout_weight="2"
-                            android:textStyle="bold"
-                            android:textColor="@color/green"/>
-
-                        <TextView
-                            android:id="@+id/tv_pRAGAVGscore"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:layout_weight="8"
-                            android:textStyle="bold"
-                            android:textColor="#000000"/>
-
-                    </LinearLayout>
-
-                    <Button
-                        android:id="@+id/btn_pdetails"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:text="Details >>"
-                        android:background="@drawable/btn_details_bg"
-                        android:textColor="#FFFFFF"
-                        android:layout_gravity="center"/>
 
                 </LinearLayout>
 
@@ -226,7 +242,7 @@
                         android:id="@+id/bchart1"
                         android:layout_marginTop="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="250dp"/>
+                        android:layout_height="280dp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -312,6 +328,16 @@
                         </LinearLayout>
 
                     </LinearLayout>
+
+                    <Button
+                        android:id="@+id/btn_pdetails"
+                        android:layout_width="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_height="30dp"
+                        android:text="Details >>"
+                        android:background="@drawable/btn_details_bg"
+                        android:textColor="#FFFFFF"
+                        android:layout_gravity="center"/>
 
                 </LinearLayout>
 
