--- a/app/src/main/res/layout/activity_pdash.xml
+++ b/app/src/main/res/layout/activity_pdash.xml
@@ -23,17 +23,18 @@
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7"
+                    android:layout_weight="7.5"
                     android:id="@+id/sp_penrollids"/>
 
                 <TextView
                     android:id="@+id/tv_pcourseid"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|center_vertical"
                     android:textColor="@color/green"
                     android:hint="courseid"
                     android:layout_margin="2dp"
-                    android:layout_weight="3"/>
+                    android:layout_weight="2.5"/>
 
             </LinearLayout>
 
@@ -45,19 +46,15 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:orientation="vertical"
                     android:layout_weight="1">
 
-                    <LinearLayout
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/chart1"
+                        android:layout_gravity="center_horizontal|center_vertical"
                         android:layout_width="200dp"
-                        android:layout_height="200dp">
-
-                        <com.github.mikephil.charting.charts.PieChart
-                            android:id="@+id/chart1"
-                            android:layout_width="200dp"
-                            android:layout_height="200dp" />
-
-                    </LinearLayout>
+                        android:layout_height="200dp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -69,7 +66,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Total Tests"
-                            android:layout_weight="2"
+                            android:layout_weight="4"
                             android:textStyle="bold"
                             android:textColor="@color/green"/>
 
@@ -78,7 +75,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:layout_weight="8"
+                            android:layout_weight="6"
                             android:textStyle="bold"
                             android:textColor="#000000"/>
                     </LinearLayout>
@@ -93,7 +90,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Attempted"
-                            android:layout_weight="2"
+                            android:layout_weight="4"
                             android:textStyle="bold"
                             android:textColor="@color/green"/>
 
@@ -102,7 +99,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:layout_weight="8"
+                            android:layout_weight="6"
                             android:textStyle="bold"
                             android:textColor="#000000"/>
 
@@ -118,7 +115,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Tests as per Plan"
-                            android:layout_weight="2"
+                            android:layout_weight="4"
                             android:textStyle="bold"
                             android:textColor="@color/green"/>
 
@@ -127,12 +124,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:layout_weight="8"
+                            android:layout_weight="6"
                             android:textStyle="bold"
                             android:textColor="#000000"/>
 
                     </LinearLayout>
-
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -144,7 +140,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="%"
-                            android:layout_weight="2"
+                            android:layout_weight="4"
                             android:textStyle="bold"
                             android:textColor="@color/green"/>
 
@@ -153,7 +149,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:layout_weight="8"
+                            android:layout_weight="6"
                             android:textStyle="bold"
                             android:textColor="#000000"/>
 
@@ -169,7 +165,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="RAG for Attempts"
-                            android:layout_weight="2"
+                            android:layout_weight="4"
                             android:textStyle="bold"
                             android:textColor="@color/green"/>
 
@@ -178,7 +174,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:layout_weight="8"
+                            android:layout_weight="6"
                             android:textStyle="bold"
                             android:textColor="#000000"/>
 
@@ -194,7 +190,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="RAG for AVG score"
-                            android:layout_weight="2"
+                            android:layout_weight="4"
                             android:textStyle="bold"
                             android:textColor="@color/green"/>
 
@@ -203,20 +199,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:layout_weight="8"
+                            android:layout_weight="6"
                             android:textStyle="bold"
                             android:textColor="#000000"/>
 
                     </LinearLayout>
-
-                    <Button
-                        android:id="@+id/btn_pdetails"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:text="Details >>"
-                        android:background="@drawable/btn_details_bg"
-                        android:textColor="#FFFFFF"
-                        android:layout_gravity="center"/>
 
                 </LinearLayout>
 
@@ -318,6 +305,16 @@
                         </LinearLayout>
 
                     </LinearLayout>
+
+                    <Button
+                        android:id="@+id/btn_pdetails"
+                        android:layout_width="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_height="30dp"
+                        android:text="Details >>"
+                        android:background="@drawable/btn_details_bg"
+                        android:textColor="#FFFFFF"
+                        android:layout_gravity="center"/>
 
                 </LinearLayout>
 
