--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.digywood.tms.MainActivity">
 
-
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:weightSum="10">
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -29,76 +27,81 @@
 
             </LinearLayout>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:elevation="5dp"
-                app:cardElevation="5dp"
-                android:layout_marginEnd="300dp"
-                android:layout_gravity="center_horizontal|center_vertical"
-                app:cardUseCompatPadding="true">
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="5"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
-
-                <EditText
-                    android:id="@+id/et_email"
-                    android:layout_width="match_parent"
+                <android.support.v7.widget.CardView
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/custom_edittext"
-                    android:hint="Number"
-                    android:inputType="number|phone" />
+                    android:elevation="5dp"
+                    app:cardElevation="5dp"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    app:cardUseCompatPadding="true">
 
-                <!-- Password Label -->
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    app:hintEnabled="false"
-                    app:passwordToggleEnabled="true">
-                    <EditText android:id="@+id/et_password"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/custom_edittext"
-                        android:inputType="textPassword"
-                        android:hint="Password"/>
-                </android.support.design.widget.TextInputLayout>
+                        android:layout_height="match_parent"
+                        android:layout_weight="5"
+                        android:orientation="vertical">
 
-                <CheckBox
-                    android:id="@+id/cb_remember"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:textColor="#000000"
-                    android:text="Remember"/>
 
-                <Button
-                    android:id="@+id/btn_login"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/custom_button"
-                    android:textColor="@drawable/custom_text"
-                    android:layout_margin="20dp"
-                    android:padding="12dp"
-                    android:text="Login"/>
+                        <EditText
+                            android:id="@+id/et_email"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:background="@drawable/custom_edittext"
+                            android:hint="Number"
+                            android:inputType="number|phone" />
 
-                <TextView android:id="@+id/tv_signup"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:layout_margin="20dp"
-                    android:text="No account yet? Create one"
-                    android:gravity="center"
-                    android:textSize="16dip"/>
+                        <!-- Password Label -->
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            app:hintEnabled="false"
+                            app:passwordToggleEnabled="true">
+                            <EditText android:id="@+id/et_password"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/custom_edittext"
+                                android:inputType="textPassword"
+                                android:hint="Password"/>
+                        </android.support.design.widget.TextInputLayout>
+
+                        <CheckBox
+                            android:id="@+id/cb_remember"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:textColor="#000000"
+                            android:text="Remember"/>
+
+                        <Button
+                            android:id="@+id/btn_login"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/custom_button"
+                            android:textColor="@drawable/custom_text"
+                            android:layout_margin="20dp"
+                            android:padding="12dp"
+                            android:text="Login"/>
+
+                        <TextView android:id="@+id/tv_signup"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:layout_margin="20dp"
+                            android:text="No account yet? Create one"
+                            android:gravity="center"
+                            android:textSize="16dip"/>
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
 
             </LinearLayout>
-            </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
