--- a/app/src/main/res/layout/activity_paper.xml
+++ b/app/src/main/res/layout/activity_paper.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.digywood.tms.CourseActivity">
+    tools:context="com.digywood.tms.PaperActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
