--- a/app/src/main/res/layout-large/activity_testitem.xml
+++ b/app/src/main/res/layout-large/activity_testitem.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="160dp"
         android:elevation="5dp"
         android:padding="2dp"
         app:cardElevation="5dp"
@@ -31,7 +31,6 @@
                     android:id="@+id/iv_history"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginStart="20dp"
                     android:src="@drawable/ic_history_black_36dp" />
 
                 <TextView
@@ -41,23 +40,23 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:hint="testid"
-                    android:textColor="#000000"
-                    android:textSize="16dp" />
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textSize="20dp" />
 
                 <TextView
+                    android:id="@+id/tv_teststatus"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:id="@+id/tv_teststatus"
                     android:layout_marginEnd="10dp"
                     android:gravity="center"
-                    android:text="status"/>
+                    android:text="status" />
 
                 <ImageView
                     android:id="@+id/iv_download"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginEnd="20dp"
-                    android:src="@drawable/download" />
+                    android:src="@drawable/ic_file_download_black_36dp" />
 
             </LinearLayout>
 
@@ -65,12 +64,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:layout_gravity="center"
-                android:background="@android:color/black" />
+                android:background="@android:color/darker_gray" />
 
             <LinearLayout
                 android:id="@+id/row2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:weightSum="2">
 
                 <LinearLayout
@@ -80,44 +79,119 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center_horizontal|top"
-                        android:text="Practice Test" />
+                        android:orientation="horizontal"
+                        android:weightSum="10">
 
-                    <LinearLayout android:layout_width="match_parent"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Practice Test"
+                            android:textSize="20dp"
+                            android:layout_weight="6"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:layout_weight="4"
+                            android:layout_marginEnd="5sp"
+                            android:id="@+id/tv_testAttempt"
+                            android:textSize="12dp" />
+
+
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:weightSum="4">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal|top"
+                            android:layout_weight="1"
+                            android:textSize="15sp"
+                            android:text="Max:" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal|top"
+                            android:layout_weight="1"
+                            android:textSize="15sp"
+                            android:id="@+id/tv_attempt_max" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal|top"
+                            android:layout_weight="1"
+                            android:textSize="15sp"
+                            android:text="Min:" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal|top"
+                            android:layout_weight="1"
+                            android:textSize="15sp"
+                            android:id="@+id/tv_attempt_min" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_gravity="bottom"
                         android:weightSum="2">
 
                         <Button
+                            android:id="@+id/btn_pstart"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/btn_pstart"
-                            android:text="Start"
+                            android:layout_marginEnd="2dp"
+                            android:layout_weight="1"
+                            android:layout_gravity="bottom"
                             android:background="@drawable/custom_button"
-                            android:textColor="@drawable/custom_text"
-                            android:layout_weight="1"/>
+                            android:text="Start"
+                            android:textColor="@drawable/custom_text" />
 
                         <Button
+                            android:id="@+id/btn_review"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/btn_review"
-                            android:text="Review"
+                            android:layout_weight="1"
+                            android:layout_gravity="bottom"
                             android:background="@drawable/custom_button"
-                            android:textColor="@drawable/custom_text"
-                            android:layout_weight="1"/>
+                            android:text="Review"
+                            android:textColor="@drawable/custom_text" />
                     </LinearLayout>
-
                 </LinearLayout>
+                <com.github.mikephil.charting.charts.PieChart
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:id="@+id/test_piechart">
+
+                </com.github.mikephil.charting.charts.PieChart>
+
 
                 <View
                     android:id="@+id/divider"
                     android:layout_width="2dp"
                     android:layout_height="match_parent"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="15dp"
                     android:layout_gravity="center"
-                    android:background="@android:color/black" />
+                    android:background="@android:color/darker_gray" />
 
                 <LinearLayout
                     android:id="@+id/row_flash"
@@ -133,21 +207,28 @@
                         android:text="Flash Card" />
 
                     <LinearLayout android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:weightSum="2">
 
                         <Button
+                            android:id="@+id/btn_fstart"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/btn_fstart"
-                            android:text="Start"
+                            android:layout_gravity="bottom"
+                            android:layout_weight="1"
                             android:background="@drawable/custom_button"
-                            android:textColor="@drawable/custom_text"
-                            android:layout_weight="1"/>
+                            android:text="Start"
+                            android:textColor="@drawable/custom_text" />
                     </LinearLayout>
 
                 </LinearLayout>
+                <com.github.mikephil.charting.charts.PieChart
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:id="@+id/flash_piechart">
+
+                </com.github.mikephil.charting.charts.PieChart>
 
             </LinearLayout>
         </LinearLayout>
