--- a/app/src/main/res/layout/activity_enrollitem.xml
+++ b/app/src/main/res/layout/activity_enrollitem.xml
@@ -5,44 +5,235 @@
     android:layout_height="wrap_content"
     android:layout_margin="3dp">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:layout_margin="3dp"
         android:layout_gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_enrollid"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColor="#000000"
-            android:gravity="center_vertical"
-            android:layout_weight="1"
-            android:textSize="16dp"/>
-
-        <TextView
-            android:id="@+id/tv_enrollcourseid"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:textColor="#000000"
-            android:layout_weight="1"
-            android:textSize="16dp"/>
+        card:cardCornerRadius="5dp"
+        card:cardElevation="5dp"
+        card:contentPadding="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:weightSum="10"
+            android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/btn_start"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:textColor="#000000"
-                android:background="@drawable/btn_shape"
-                android:text="start"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.8"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="EnrollId"
+                            android:textColor="@color/green"
+                            android:gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:textSize="16dp"/>
+
+                        <TextView
+                            android:id="@+id/tv_enrollid"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="#000000"
+                            android:gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:textSize="16dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="BatchId"
+                            android:textColor="@color/green"
+                            android:gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:textSize="16dp"/>
+
+                        <TextView
+                            android:id="@+id/tv_batchid"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:textColor="#000000"
+                            android:layout_weight="1"
+                            android:textSize="16dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="OrgId"
+                            android:textColor="@color/green"
+                            android:gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:textSize="16dp"/>
+
+                        <TextView
+                            android:id="@+id/tv_orgnisationid"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:textColor="#000000"
+                            android:layout_weight="1"
+                            android:textSize="16dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Days Left"
+                            android:textColor="@color/green"
+                            android:gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:textSize="16dp"/>
+
+                        <TextView
+                            android:id="@+id/tv_daysleft"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:textColor="#000000"
+                            android:layout_weight="1"
+                            android:textSize="16dp"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="10"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="CourseName"
+                            android:layout_marginRight="3dp"
+                            android:textColor="@color/green"
+                            android:gravity="center_vertical"
+                            android:textSize="16dp"/>
+
+                        <TextView
+                            android:id="@+id/tv_coursename"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#000000"
+                            android:gravity="center_vertical"
+                            android:textSize="16dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Actived Date"
+                            android:layout_marginRight="2dp"
+                            android:textColor="@color/green"
+                            android:gravity="center_vertical"
+                            android:textSize="16dp"/>
+
+                        <TextView
+                            android:id="@+id/tv_activateddate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:textColor="#000000"
+                            android:textSize="16dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="2dp"
+                            android:text="End Date"
+                            android:textColor="@color/green"
+                            android:gravity="center_vertical"
+                            android:textSize="16dp"/>
+
+                        <TextView
+                            android:id="@+id/tv_enddate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:textColor="#000000"
+                            android:textSize="16dp"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_weight="9.2">
+
+                <Button
+                    android:id="@+id/btn_enrolldet"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:background="@drawable/details1"/>
+
+            </LinearLayout>
 
         </LinearLayout>
-    </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
