--- a/app/src/main/res/layout-large/activity_enrollitem.xml
+++ b/app/src/main/res/layout-large/activity_enrollitem.xml
@@ -25,7 +25,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.8"
+                android:layout_weight="0.5"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -40,21 +40,20 @@
                         android:layout_weight="1">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
                             android:text="EnrollId"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
-                            android:layout_weight="1"
                             android:textSize="16dp"/>
 
                         <TextView
                             android:id="@+id/tv_enrollid"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="#000000"
                             android:gravity="center_vertical"
-                            android:layout_weight="1"
                             android:textSize="16dp"/>
 
                     </LinearLayout>
@@ -66,21 +65,20 @@
                         android:layout_weight="1">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
                             android:text="BatchId"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
-                            android:layout_weight="1"
                             android:textSize="16dp"/>
 
                         <TextView
                             android:id="@+id/tv_batchid"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:textColor="#000000"
-                            android:layout_weight="1"
                             android:textSize="16dp"/>
 
                     </LinearLayout>
@@ -92,21 +90,20 @@
                         android:layout_weight="1">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
                             android:text="OrgId"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
-                            android:layout_weight="1"
                             android:textSize="16dp"/>
 
                         <TextView
                             android:id="@+id/tv_orgnisationid"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:textColor="#000000"
-                            android:layout_weight="1"
                             android:textSize="16dp"/>
 
                     </LinearLayout>
@@ -118,21 +115,20 @@
                         android:layout_weight="1">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
                             android:text="Days Left"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
-                            android:layout_weight="1"
                             android:textSize="16dp"/>
 
                         <TextView
                             android:id="@+id/tv_daysleft"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:textColor="#000000"
-                            android:layout_weight="1"
                             android:textSize="16dp"/>
 
                     </LinearLayout>
@@ -161,7 +157,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="CourseName"
-                            android:layout_marginRight="3dp"
+                            android:layout_marginRight="5dp"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
                             android:textSize="16dp"/>
@@ -186,7 +182,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Actived Date"
-                            android:layout_marginRight="2dp"
+                            android:layout_marginRight="5dp"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
                             android:textSize="16dp"/>
@@ -210,7 +206,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="2dp"
+                            android:layout_marginRight="5dp"
                             android:text="End Date"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
@@ -234,7 +230,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"
-                android:layout_weight="9.2">
+                android:layout_weight="9.5">
 
                 <Button
                     android:id="@+id/btn_enrolldet"
