--- a/app/src/main/res/layout/activity_db.xml
+++ b/app/src/main/res/layout/activity_db.xml
@@ -16,6 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal"
             android:layout_weight="1">
 
             <android.support.design.widget.TabLayout
@@ -26,7 +27,7 @@
                 app:tabTextColor="@color/white"
                 app:tabSelectedTextColor="@color/colorPrimary"
                 app:tabIndicatorColor="@color/colorPrimary"
-                android:layout_gravity="center_horizontal|center_vertical"
+                android:gravity="center_horizontal|center_vertical"
                 android:elevation="6dp"
                 android:background="@drawable/tablayout_bg"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
