--- a/app/src/main/res/layout-large/activity_testitem.xml
+++ b/app/src/main/res/layout-large/activity_testitem.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="130dp"
         android:padding="1dp"
         app:cardElevation="5dp"
         app:cardUseCompatPadding="true">
@@ -17,8 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="top"
-            android:padding="6dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="6dp">
 
             <LinearLayout
                 android:id="@+id/row_header"
@@ -29,8 +29,8 @@
 
                 <ImageView
                     android:id="@+id/iv_history"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:src="@drawable/ic_history_black_36dp" />
 
                 <TextView
@@ -41,8 +41,8 @@
                     android:gravity="center"
                     android:hint="testid"
                     android:textColor="@color/green"
-                    android:textStyle="bold"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_teststatus"
@@ -54,8 +54,8 @@
 
                 <ImageView
                     android:id="@+id/iv_download"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:src="@drawable/ic_file_download_black_36dp" />
 
             </LinearLayout>
@@ -92,22 +92,22 @@
                             android:textSize="20sp" />
 
                         <TextView
+                            android:id="@+id/tv_testAttempt"
                             android:layout_width="28dp"
                             android:layout_height="28dp"
-                            android:gravity="center"
                             android:layout_gravity="center"
                             android:layout_marginEnd="5sp"
-                            android:textColor="@color/white"
                             android:background="@drawable/number_skipped"
-                            android:id="@+id/tv_testAttempt"
+                            android:gravity="center"
+                            android:textColor="@color/white"
                             android:textSize="12sp" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
                             android:layout_gravity="center"
                             android:layout_marginStart="10dp"
+                            android:orientation="horizontal"
                             android:weightSum="2">
 
                             <LinearLayout
@@ -118,18 +118,18 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:gravity="center_horizontal|top"
-                                    android:textSize="15sp"
                                     android:layout_marginEnd="8dp"
-                                    android:text="Max:" />
+                                    android:gravity="center_horizontal|top"
+                                    android:text="Max:"
+                                    android:textSize="15sp" />
 
                                 <TextView
+                                    android:id="@+id/tv_attempt_max"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
-                                    android:textSize="15sp"
                                     android:textColor="@color/green"
-                                    android:id="@+id/tv_attempt_max" />
+                                    android:textSize="15sp" />
                             </LinearLayout>
 
 
@@ -141,18 +141,18 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:gravity="center_horizontal|top"
-                                    android:textSize="15sp"
                                     android:layout_marginEnd="8dp"
-                                    android:text="Min:" />
+                                    android:gravity="center_horizontal|top"
+                                    android:text="Min:"
+                                    android:textSize="15sp" />
 
                                 <TextView
+                                    android:id="@+id/tv_attempt_min"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
-                                    android:textSize="15sp"
                                     android:textColor="@color/green"
-                                    android:id="@+id/tv_attempt_min" />
+                                    android:textSize="15sp" />
                             </LinearLayout>
 
 
@@ -162,73 +162,76 @@
                     </LinearLayout>
 
 
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal"
                         android:layout_gravity="bottom"
-                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal"
                         android:weightSum="3">
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:orientation="vertical">
+                            android:orientation="horizontal">
 
                             <ImageView
                                 android:id="@+id/iv_start"
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
-                                android:layout_marginEnd="2dp"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
                                 android:layout_gravity="center"
+                                android:layout_marginEnd="2dp"
                                 android:src="@drawable/play" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
+                                android:layout_marginStart="3dp"
                                 android:text="Start" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:orientation="vertical">
+                            android:orientation="horizontal">
 
-                        <ImageView
-                            android:id="@+id/iv_resume"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/resume"/>
+                            <ImageView
+                                android:id="@+id/iv_resume"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_gravity="center"
+                                android:src="@drawable/resume"
+                                android:foreground="@drawable/option_locked_overlay"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
+                                android:layout_marginStart="3dp"
                                 android:text="Resume" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:orientation="vertical">
+                            android:orientation="horizontal">
 
-                        <ImageView
-                            android:id="@+id/iv_review"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:layout_gravity="center"
-                            android:src="@drawable/review"/>
+                            <ImageView
+                                android:id="@+id/iv_review"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_gravity="center"
+                                android:foreground="@drawable/option_locked_overlay"
+                                android:src="@drawable/review"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
+                                android:layout_marginStart="3dp"
                                 android:text="Review" />
                         </LinearLayout>
 
@@ -236,59 +239,129 @@
 
                 </LinearLayout>
 
-                <com.github.mikephil.charting.charts.PieChart
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:id="@+id/test_piechart">
-
-                </com.github.mikephil.charting.charts.PieChart>
-
 
                 <View
                     android:id="@+id/divider"
                     android:layout_width="2dp"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center"
                     android:layout_marginBottom="15dp"
                     android:layout_marginTop="15dp"
-                    android:layout_gravity="center"
                     android:background="@android:color/darker_gray" />
 
                 <LinearLayout
                     android:id="@+id/row_flash"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:textSize="20sp"
-                        android:text="Flash Card" />
 
-                    <LinearLayout android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Flash Card"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/tv_flashAttempt"
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="5sp"
+                            android:background="@drawable/number_skipped"
+                            android:gravity="center"
+                            android:textColor="@color/white"
+                            android:textSize="12sp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="10dp"
+                            android:orientation="horizontal"
+                            android:weightSum="2">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginEnd="8dp"
+                                    android:gravity="center_horizontal|top"
+                                    android:text="Max:"
+                                    android:textSize="15sp" />
+
+                                <TextView
+                                    android:id="@+id/tv_flash_max"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center_horizontal|top"
+                                    android:textColor="@color/green"
+                                    android:textSize="15sp" />
+                            </LinearLayout>
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginEnd="8dp"
+                                    android:gravity="center_horizontal|top"
+                                    android:text="Min:"
+                                    android:textSize="15sp" />
+
+                                <TextView
+                                    android:id="@+id/tv_flash_min"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center_horizontal|top"
+                                    android:textColor="@color/green"
+                                    android:textSize="15sp" />
+                            </LinearLayout>
+
+
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:weightSum="2">
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/iv_fstart"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="2dp"
+                            android:src="@drawable/play" />
+
+                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="bottom"
-                            android:layout_weight="1"
-                            android:background="@drawable/custom_button"
-                            android:textColor="@drawable/custom_text" />
+                            android:layout_gravity="center"
+                            android:layout_marginStart="3dp"
+                            android:text="Start" />
                     </LinearLayout>
 
                 </LinearLayout>
-                <com.github.mikephil.charting.charts.PieChart
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:id="@+id/flash_piechart">
-
-                </com.github.mikephil.charting.charts.PieChart>
 
             </LinearLayout>
         </LinearLayout>
